edited anti join

--- a/practicing joins/practice_joins.html
+++ b/practicing joins/practice_joins.html
@@ -1746,7 +1746,9 @@ Which? Implement them.</p>
 <span id="cb14-3"><a href="#cb14-3" tabindex="-1"></a>  <span class="fu">full_join</span>(data_selfreport_summary_subset, <span class="at">by =</span> <span class="st">&quot;unique_id&quot;</span>)</span>
 <span id="cb14-4"><a href="#cb14-4" tabindex="-1"></a></span>
 <span id="cb14-5"><a href="#cb14-5" tabindex="-1"></a>data_missing_ids <span class="ot">&lt;-</span> data_missing_ids <span class="sc">%&gt;%</span></span>
-<span id="cb14-6"><a href="#cb14-6" tabindex="-1"></a>  <span class="fu">anti_join</span>(data_unique_id_subset, <span class="at">by =</span> <span class="st">&quot;unique_id&quot;</span>)</span></code></pre></div>
+<span id="cb14-6"><a href="#cb14-6" tabindex="-1"></a>  <span class="fu">anti_join</span>(data_unique_id_subset, <span class="at">by =</span> <span class="st">&quot;unique_id&quot;</span>) <span class="sc">%&gt;%</span> </span>
+<span id="cb14-7"><a href="#cb14-7" tabindex="-1"></a>  <span class="fu">select</span>(unique_id) <span class="sc">%&gt;%</span> <span class="co">#we only need unique id for the answer</span></span>
+<span id="cb14-8"><a href="#cb14-8" tabindex="-1"></a>  <span class="fu">distinct</span>(unique_id) <span class="co"># to sort out duplicates</span></span></code></pre></div>
 </div>
 </div>
 
